<?xml version="1.0"?>
<package format="2">
  <name>tricycle</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for tricycle</p>
    <p>This package contains configuration data, 3D models and launch files
for tricycle robot</p>
  </description>
  
  <author>Ismael Ait</author>
  <maintainer email="ismaelaitd@gmail.com" />
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
