<?xml version="1.0"?>
<package format="2">
  <name>velodyne</name>
  <version>0.0.0</version>
  <description>The velodyne package</description>

  <maintainer email="ismaelaitd@gmail.com">iait</maintainer>

  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
