<?xml version="1.0"?>
<package format="2">
  <name>vehicle_2_description</name>
  <version>0.0.0</version>
  <description>The vehicle_2_description package</description>

  <maintainer email="ismaelaitd@gmail.com">Ismael Ait</maintainer>

  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- Export -->
  <export>
  </export>
</package>

